--- a/前端面试题.md
+++ b/前端面试题.md
@@ -147,4 +147,14 @@ next: Function: 一定要调用该方法来 resolve 这个钩子。
 例如： var arr = [1, 2, 3, 1, 2]; var newArr= [...new Set(arr)]
 ```
 
-> **18.**
+> **18.网页从输入网址到渲染完成经历了哪些过程？**
+
+大致可以分为如下7步：
+
+1. 输入网址；
+2. 发送到DNS服务器，并获取域名对应的web服务器对应的ip地址；
+3. 与web服务器建立TCP连接；
+4. 浏览器向web服务器发送http请求；
+5. web服务器响应请求，并返回指定url的数据（或错误信息，或重定向的新的url地址）；
+6. 浏览器下载web服务器返回的数据及解析html源文件；
+7. 生成DOM树，解析css和js，渲染页面，直至显示完成；
